# COCKLOCKER

./: .gitignore  .gitmodules  ENTRY_POINT.md  INTEGRATION_GUIDE.md  KERNEL_CONFIG.md  MISSION.md  QUICKSTART.md  README.md  build_feature_complete.sh  build_hardened_cockpit.sh  cocklocker.sh
DOCUMENTATION/: METEORLAKE_AI.md
IMPLEMENTATION/cockpit-intel-monitor/: index.html  intel-monitor.html  manifest.json
IMPLEMENTATION/cockpit-xen-manager/: index.html  manifest.json  xen-manager.html  xen_manager.py
IMPLEMENTATION/intel-meteorlake/: intel_npu_manager.py  meteorlake_optimizer.sh
IMPLEMENTATION/plugins/: plugin_manager.sh
IMPLEMENTATION/scripts/: post-stop.sh  pre-start.sh
IMPLEMENTATION/systemd/: cockpit-hardened.service  cockpit-hardened.socket  cockpit-npu-monitor.service  cockpit-npu-monitor.timer  cockpit-security-monitor.service
fuzzing/: fuzz_harness.py  setup_fuzzing.sh
hardened_configs/: cockpit.conf  firewall-rules.sh  pam.d-cockpit
kernel-integration/: INTEGRATION.md  integrate.sh  kernel.config.fragment  verify-kernel.sh
monitoring/: security_monitor.py
sandbox/: Cargo.toml
sandbox/src/: main.rs
