[package]
name = "cockpit-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["CockLocker Project"]
description = "APT-level sandboxing for Cockpit web interface"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "fs"] }
seccompiler = "0.4"
landlock = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
caps = "0.5"

[[bin]]
name = "cockpit-sandbox"
path = "src/main.rs"
